syntax = "proto3";
package proto;

message BucketOptions {
	int32 Version = 1;
	int32 Policy  = 2;
	int32 DataCount = 3;
	int32 ParityCount = 4;
	int32 TagFlag = 5;
	int32 SegmentSize = 6;
	// number of segments
	int32 SegmentCount = 7;
	bool Encryption = 8; 
	int32 Start = 11;
}
